# cdc-core

./: .gitignore  .gitmodules  BUILD_UBUNTU.md  CMakeLists.txt  LICENSE  README.md
include/api/: ApiLogger.hpp  ApiMetadata.hpp  CommonApi.hpp  ConversionFunctions.hpp  GlobalApiLogger.hpp
include/client/: Client.hpp  ClientImpl.hpp  Messages.hpp  Notifier.hpp  SeedNodes.hpp
include/consensus/: Checkpoints.hpp  Condition.hpp  Config.hpp  DelegateConfig.hpp  Exceptions.hpp  Time.hpp  Types.hpp  UvmChainApi.hpp  WithdrawTypes.hpp  api_extern.hpp
include/consensus/account/: AccountEntry.hpp
include/consensus/address/: Address.hpp  ExtendedAddress.hpp  PtsAddress.hpp
include/consensus/asset/: Asset.hpp  AssetEntry.hpp
include/consensus/balance/: BalanceEntry.hpp
include/consensus/block/: Block.hpp  BlockEntry.hpp  ForkBlocks.hpp
include/consensus/cdcdata/: CdcDataEntry.hpp
include/consensus/chainstate/: ChainDatabase.hpp  ChainDatabaseImpl.hpp  ChainInterface.hpp  PendingChainState.hpp
include/consensus/contract/: Code.hpp  ContractCreatorEntry.hpp  ContractEntry.hpp  StorageTypes.hpp
include/consensus/contract_engine/: ContractEngine.hpp  ContractEngineBuilder.hpp  uvm_contract_engine.hpp
include/consensus/evidence/: EvidenceFactory.hpp  Evidences.hpp  ShopReceiptEvidence.hpp
include/consensus/genesis/: GenesisJson.hpp  GenesisState.hpp
include/consensus/operation/: AccountOperations.hpp  AssetOperations.hpp  BalanceOperations.hpp  ContractOperations.hpp  EventOperations.hpp  GeneralAdminOperations.hpp  ImessageOperations.hpp  OperationFactory.hpp  Operations.hpp  ProposalOperations.hpp  SlateOperations.hpp  StorageOperations.hpp  TransactionOperations.hpp
include/consensus/property/: PropertyEntry.hpp
include/consensus/proposal/: ProposalEntry.hpp
include/consensus/role/: RoleEntry.hpp
include/consensus/shopreceipt/: ShopReceiptEntry.hpp
include/consensus/slate/: SlateEntry.hpp
include/consensus/slot/: SlotEntry.hpp
include/consensus/transaction/: Transaction.hpp  TransactionCreationState.hpp  TransactionEntry.hpp  TransactionEvaluationState.hpp
include/console/: Cli.hpp  Locale.hpp  Pretty.hpp  PrintResult.hpp
include/db/: CachedLevelMap.hpp  Exception.hpp  FastLevelMap.hpp  FsHashMap.hpp  Fwd.hpp  LevelMap.hpp  LevelPodMap.hpp  UpgradeLeveldb.hpp
include/network/: Config.hpp  Connection.hpp  CoreMessages.hpp  Exceptions.hpp  Message.hpp  MessageOrientedConnection.hpp  Node.hpp  PeerConnection.hpp  PeerDatabase.hpp  StcpSocket.hpp  Upnp.hpp
include/rpc/: Exceptions.hpp  RpcClient.hpp  RpcClientApi.hpp  RpcServer.hpp
include/rpc_stubs/: CommonApiClient.hpp  CommonApiOverrides.ipp  CommonApiRpcClient.hpp  CommonApiRpcServer.hpp
include/utilities/: CharacterRecognition.hpp  CommonApi.hpp  GitRevision.hpp  KeyConversion.hpp  PaddingOstream.hpp  StringEscape.hpp  ThreadPool.hpp  Words.hpp
include/wallet/: Config.hpp  Exceptions.hpp  Pretty.hpp  TransactionBuilder.hpp  Url.hpp  Wallet.hpp  WalletDb.hpp  WalletEntrys.hpp  WalletImpl.hpp
src/: Main.cpp
src/api/: ApiLogger.cpp  GlobalApiLogger.cpp
src/client/: BlockchainApi.cpp  Client.cpp  ContractApi.cpp  DebugApi.cpp  DelegateApi.cpp  GeneralApi.cpp  Messages.cpp  NetworkApi.cpp  Notifier.cpp  ProposalApi.cpp  ScriptApi.cpp  SimulatorContractApi.cpp  WalletApi.cpp
src/consensus/: Time.cpp  Types.cpp  UvmChainApi.cpp  WithdrawTypes.cpp  ubcore_lua_api.cpp
src/consensus/account/: AccountEntry.cpp
src/consensus/address/: Address.cpp  Address.cpp.backup  ExtendedAddress.cpp  PtsAddress.cpp
src/consensus/asset/: Asset.cpp  AssetEntry.cpp
src/consensus/balance/: BalanceEntry.cpp
src/consensus/block/: Block.cpp  ForkBlocks.cpp
src/consensus/cdcdata/: CdcDataEntry.cpp
src/consensus/chainstate/: ChainDatabase.cpp  ChainInterface.cpp  PendingChainState.cpp
src/consensus/contract/: Code.cpp  ContractCreatorEntry.cpp  ContractEntry.cpp  StorageTypes.cpp
src/consensus/contract_engine/: ContractEngine.cpp  ContractEngineBuilder.cpp  uvm_contract_engine.cpp
src/consensus/evidence/: Evidences.cpp  ShopReceiptEvidence.cpp
src/consensus/genesis/: GenesisJson.cpp  GenesisJson.cpp.origin  GenesisJson_test.cpp
src/consensus/operation/: AccountOperations.cpp  AssetOperations.cpp  BalanceOperations.cpp  ContractOperations.cpp  EventOperations.cpp  GeneralAdminOperations.cpp  ImessageOperations.cpp  Operations.cpp  ProposalOperations.cpp  SlateOperations.cpp  StorageOperations.cpp  TransactionOperations.cpp
src/consensus/property/: PropertyEntry.cpp
src/consensus/proposal/: ProposalEntry.cpp
src/consensus/role/: RoleEntry.cpp
src/consensus/shopreceipt/: ShopReceiptEntry.cpp
src/consensus/slate/: SlateEntry.cpp
src/consensus/slot/: SlotEntry.cpp
src/consensus/transaction/: Transaction.cpp  TransactionCreationState.cpp  TransactionEntry.cpp  TransactionEvaluationState.cpp
src/console/: Cli.cpp  Pretty.cpp  PrintResult.cpp
src/db/: UpgradeLeveldb.cpp
src/network/: CoreMessages.cpp  MessageOrientedConnection.cpp  Node.cpp  PeerConnection.cpp  PeerDatabase.cpp  StcpSocket.cpp  Upnp.cpp
src/rpc/: RpcClient.cpp  RpcServer.cpp
src/rpc_stubs/: CommonApiClient.cpp  CommonApiRpcClient.cpp  CommonApiRpcServer.cpp
src/utilities/: CharacterRecognition.cpp  CommonApi.cpp  GitRevision.cpp  Keccak.cpp  KeyConversion.cpp  StringEscape.cpp
src/wallet/: Login.cpp  TransactionBuilder.cpp  TransactionLedger.cpp  TransactionLedgerExperimental.cpp  Wallet.cpp  WalletDb.cpp  WalletEntrys.cpp
uvm/: .gitignore  LICENSE  README.md  uvm.sln  uvm.vcxproj
uvm/include/uvm/: exceptions.h  lapi.h  lauxlib.h  lcode.h  lctype.h  ldebug.h  ldo.h  lfunc.h  lgc.h  lhashmap.h  llex.h  llimits.h  lmem.h  lnetlib.h  lobject.h  lopcodes.h  lparser.h  lstate.h  lstring.h  ltable.h  ltm.h  lua.h  lua.hpp  luaconf.h  lualib.h  lundump.h  lvm.h  lzio.h  uvm_api.h  uvm_api_types.h  uvm_common.h  uvm_compat.h  uvm_lib.h  uvm_lutil.h  uvm_storage.h  uvm_tokenparser.h
uvm/src/uvm/: .gitignore  lapi.cpp  lauxlib.cpp  (+44 more)
uvm/uvm_single/: main.cpp  uvm_api.demo.cpp  uvm_api.demo.h  uvm_single.vcxproj
(+2 files in other folders)
